feat(00-project): implmenet procdure query for order admin